# wgpu-experiments

./: Cargo.toml  LICENSE  README.md  build.rs
src/: buffer.rs  camera.rs  main.rs  mesh.rs  scene.rs  texture.rs  vertex.rs
src/scene/: camera.rs  clown.rs  instancing.rs  textured.rs  triangle.rs
src/shaders/: camerabois.vert  camerabois.vert.spv  instancing.vert  instancing.vert.spv  instancing_depth.frag  instancing_depth.frag.spv  instancing_depth.vert  instancing_depth.vert.spv  mysecondshader.frag  mysecondshader.frag.spv  mysecondshader.vert  mysecondshader.vert.spv
